[metadata]
name = trio
version = 0.0.0
description = A friendly Python library for async concurrency and I/O
long_description = file: LONG_DESCRIPTION.rst
long_description_content_type = text/x-rst
author = Nathaniel J. Smith
author_email = njs@pobox.com
url = https://github.com/python-trio/trio
license = MIT OR Apache-2.0
keywords =
    async
    io
    networking
    trio
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Trio
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Networking
    Typing :: Typed
project_urls =
    Documentation=https://trio.readthedocs.io/
    Changelog=https://trio.readthedocs.io/en/latest/history.html

[options]
packages = find:
install_requires =
    attrs >= 20.1.0
    sortedcontainers
    idna
    outcome
    sniffio >= 1.3.0
    cffi>=1.14; os_name == 'nt' and implementation_name != 'pypy'
    exceptiongroup >= 1.0.0rc9; python_version < '3.11'
include_package_data = True
python_requires = >=3.8
